Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85612

FBX embedded texture imported wrong.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.0.0 RC, 6.0, 5.15
    • 6.0, 5.15.0 RC2
    • Quick: 3D
    • None
    • 1
    • 1f08f26bd2992a1b9fc54f20649559a1503be2e1 (qt/qtquick3d/dev)

    Description

      Hello,

      There is a problem with importing embedded texture in FBX.

       

      First,  when i tried convert fbx to qml with balsam, i got a message that texture does not exist.

      Here is the error message.

      [C:\Qt\5.15.0\mingw81_64\bin\balsam.exe uv_test3.fbx
      "C:/Users/user/Desktop/temp/uv_test3.fbm/20190430_090507_HDR.jpg" (a.k.a. "C:/Users/user/Desktop/temp/uv_test3.fbm/20190430_090507_HDR.jpg" ) does not exist, skipping generated file: "C:/Users/user/Desktop/temp
      Uv_test3.qml"]

       

      Second,

      In created qml file, Material of object doesn't have image path.

      So, object doesn't show the texture in viewport.

       

      Instead of missing texture, i found that 0.jpg was created in map folder.

       

      It seems same with missing HDR.jpg. Did balsam make it instead of HDR.jpg?

       

      My expectation is, in anyway model should show the embedded texture, whether it is HDR.jpg or 0.jpg. How can make it work?

       

      Thank you in advance.

       

       

       

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jokarlss Jonas Karlsson
            kyue MinKyue Shim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes