FBX: Support named embedded textures

The importer assumed that all embedded textures are prefixed with an
asterix but this does not always seem to be the case in practice.
Therefore we reference these textures directly by name.

Fixes: QTBUG-85612
Change-Id: Iae174b6894dc8ce7b719769a2738f77132b8980e
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>